created external mapping service interface and data class