@@ -6,6 +6,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class OntologyFilterServiceImpl implements OntologyFilterService {
@@ -24,9 +25,7 @@ public class OntologyFilterServiceImpl implements OntologyFilterService {
                 processedOntologies.stream()
                     .filter(processedOntology -> processedOntology.getCollection().stream()
                         .anyMatch(s::equalsIgnoreCase))
-                    .toList())
+                        .collect(Collectors.toList()))
             .orElse(processedOntologies);
     }
-
-
 }
